rename buiagent to bui-agent service on supervisord too

--- a/templates/buiagent.conf_supervisor.j2
+++ b/templates/buiagent.conf_supervisor.j2
@@ -1,4 +1,4 @@
-[program:buiagent]
+[program:bui-agent]
 priority={{ burp_sv_agent_priority }}
 directory={{ burp_sv_agent_directory }}
 command={{ burp_sv_agent_command }}
@@ -7,4 +7,3 @@ autostart={{ burp_sv_agent_autostart }}
 autorestart={{ burp_sv_agent_autorestart }}
 stdout_logfile={{ burp_sv_agent_stdout_logfile }}
 stderr_logfile={{ burp_sv_agent_stderr_logfile }}
-
