--- a/templates/buiagent.cfg.j2
+++ b/templates/buiagent.cfg.j2
@@ -19,6 +19,8 @@ sslcert = {{ burp_server_ssl_cert }}
 sslkey = {{ burp_server_ssl_key }}
 # agent password
 password = {{ burp_agent_global_password }}
+# the burp server must be started before your agent
+init_wait = {{ burp_agent_global_init_wait }}
 
 [Security]
 ## This section contains some security options. Make sure you understand the
